// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterSorter Snapshots defaults 1`] = `
<div
  autocomplete_url=""
  class="v-card v-sheet theme--light"
  filters="[object Object]"
  style="background-color: rgb(248, 248, 248); border-color: #f8f8f8;"
>
  <form
    class="v-form"
    novalidate="novalidate"
  >
    <div
      class="container filter-sorter-container fluid"
    >
       
      <div
        class="layout filter-sorter-main-layout row wrap"
      >
        <!---->
         
        <div
          class="flex grow"
        >
          <div
            class="v-input v-text-field v-text-field--single-line v-text-field--solo v-text-field--solo-flat v-text-field--enclosed v-text-field--placeholder theme--light"
          >
            <div
              class="v-input__control"
            >
              <div
                class="v-input__slot"
              >
                <div
                  class="v-text-field__slot"
                >
                  <input
                    placeholder="Start typing to Search"
                    type="text"
                  />
                </div>
              </div>
              <div
                class="v-text-field__details"
              >
                <div
                  class="v-messages theme--light"
                >
                  <div
                    class="v-messages__wrapper"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <div
          class="flex shrink"
        >
          <div
            class="v-input filter-sorter-sortable-select v-text-field v-text-field--single-line v-text-field--solo v-text-field--solo-flat v-text-field--enclosed v-select theme--light"
            role="combobox"
          >
            <div
              class="v-input__control"
            >
              <div
                class="v-input__slot"
              >
                <div
                  class="v-select__slot"
                >
                  <label
                    aria-hidden="true"
                    class="v-label theme--light"
                    style="left: 0px; position: absolute;"
                  >
                    Sort by
                  </label>
                  <div
                    class="v-select__selections"
                  >
                    <input
                      aria-label="Sort by"
                      aria-readonly="false"
                      autocomplete="on"
                      data-vv-name="sort"
                      readonly="readonly"
                      type="text"
                    />
                  </div>
                  <div
                    class="v-input__append-inner"
                  >
                    <div
                      class="v-input__icon v-input__icon--append"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        arrow_drop_down
                      </i>
                    </div>
                  </div>
                </div>
                <div
                  class="v-menu"
                >
                  <div
                    class="v-menu__content theme--light "
                    style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                  >
                    <div
                      class="v-select-list v-card theme--light"
                    >
                      <div
                        class="v-list theme--light"
                        role="list"
                      >
                        <div
                          role="listitem"
                        >
                          <div
                            class="v-list__tile theme--light"
                          >
                            <div
                              class="v-list__tile__content"
                            >
                              <div
                                class="v-list__tile__title"
                              >
                                No data available
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="v-text-field__details"
              >
                <div
                  class="v-messages theme--light"
                >
                  <div
                    class="v-messages__wrapper"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <div
          class="flex shrink"
        >
          <button
            class="v-btn v-btn--large theme--light ma-0 "
            type="button"
          >
            <div
              class="v-btn__content"
            >
              
            More Filters
          
            </div>
          </button>
        </div>
         
      </div>
       
      <!---->
       
      <div
        class="layout filter-sorter-expanded-layout align-center justify-center row fill-height"
        style="display: none;"
      >
        <div
          class="flex"
        >
          <div
            class="container pr-0 pt-1 pb-0"
          >
            <div
              class="layout row justify-space-between"
            >
              <div
                class="flex"
              >
                <div
                  button-color="#1976D2"
                  class="picker-wrap"
                  color="#1976D2"
                  format="YYYY-MM-DD"
                  formatted="MM-DD-YYYY"
                  input-size="lg"
                  label="Expiration"
                  only-date=""
                  range=""
                >
                  <div
                    class="date-time-picker no-border"
                    id="DateTimePicker"
                  >
                    <div
                      class="field flex align-center lg"
                      data-v-a0144ed0=""
                    >
                      <input
                        class="field-input no-clear-button"
                        data-v-a0144ed0=""
                        id="DateTimePicker"
                        placeholder="Expiration"
                        readonly="readonly"
                        type="text"
                      />
                      <label
                        class="field-label"
                        data-v-a0144ed0=""
                        for="DateTimePicker"
                      >
                        
    Expiration
  
                      </label>
                      <!---->
                    </div>
                    <!---->
                    <!---->
                  </div>
                   
                  <div
                    class="picker-icon"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon far fa-calendar-alt theme--light"
                    />
                  </div>
                </div>
              </div>
               
              <div
                class="flex ml-4"
              >
                <div
                  class="v-input v-text-field v-text-field--single-line v-text-field--solo v-text-field--solo-flat v-text-field--enclosed v-text-field--placeholder v-select v-input--hide-details theme--light"
                  role="combobox"
                >
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                    >
                      <div
                        class="v-select__slot"
                      >
                        <div
                          class="v-select__selections"
                        >
                          <input
                            aria-readonly="false"
                            autocomplete="on"
                            placeholder="Document Type"
                            readonly="readonly"
                            type="text"
                          />
                        </div>
                        <div
                          class="v-input__append-inner"
                        >
                          <div
                            class="v-input__icon v-input__icon--append"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon material-icons theme--light"
                            >
                              arrow_drop_down
                            </i>
                          </div>
                        </div>
                      </div>
                      <div
                        class="v-menu"
                      >
                        <div
                          class="v-menu__content theme--light "
                          style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                        >
                          <div
                            class="v-select-list v-card theme--light"
                          >
                            <div
                              class="v-list theme--light"
                              role="list"
                            >
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__content"
                                  >
                                    <div
                                      class="v-list__tile__title"
                                    >
                                      From Template
                                    </div>
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__content"
                                  >
                                    <div
                                      class="v-list__tile__title"
                                    >
                                      Downloadable
                                    </div>
                                  </div>
                                </a>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
               
              <div
                class="flex ml-4"
              >
                <div
                  class="v-input v-text-field v-text-field--single-line v-text-field--solo v-text-field--solo-flat v-text-field--enclosed v-text-field--placeholder v-select v-input--hide-details theme--light"
                  role="combobox"
                >
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                    >
                      <div
                        class="v-select__slot"
                      >
                        <div
                          class="v-select__selections"
                        >
                          <input
                            aria-readonly="false"
                            autocomplete="on"
                            placeholder="Status: All"
                            readonly="readonly"
                            type="text"
                          />
                        </div>
                        <div
                          class="v-input__append-inner"
                        >
                          <div
                            class="v-input__icon v-input__icon--append"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon material-icons theme--light"
                            >
                              arrow_drop_down
                            </i>
                          </div>
                        </div>
                      </div>
                      <div
                        class="v-menu"
                      >
                        <div
                          class="v-menu__content theme--light "
                          style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                        >
                          <div
                            class="v-select-list v-card theme--light"
                          >
                            <div
                              class="v-list theme--light"
                              role="list"
                            >
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__content"
                                  >
                                    <div
                                      class="v-list__tile__title"
                                    >
                                      Pending
                                    </div>
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__content"
                                  >
                                    <div
                                      class="v-list__tile__title"
                                    >
                                      Approved
                                    </div>
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__content"
                                  >
                                    <div
                                      class="v-list__tile__title"
                                    >
                                      Rejected
                                    </div>
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__content"
                                  >
                                    <div
                                      class="v-list__tile__title"
                                    >
                                      Expiring
                                    </div>
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__content"
                                  >
                                    <div
                                      class="v-list__tile__title"
                                    >
                                      Expired
                                    </div>
                                  </div>
                                </a>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
               
              <div
                class="flex ml-4"
              >
                <div
                  class="layout row justify-space-between"
                  type="1"
                >
                  <div
                    class="flex md6 sm12"
                  >
                    <div
                      class="v-input v-text-field v-text-field--single-line v-text-field--solo v-text-field--solo-flat v-text-field--enclosed v-select v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light"
                      role="combobox"
                    >
                      <div
                        class="v-input__control"
                      >
                        <div
                          class="v-input__slot"
                          style="height: 48px;"
                        >
                          <div
                            class="v-select__slot"
                          >
                            <div
                              class="v-select__selections"
                            >
                              <div
                                class="v-select__selection v-select__selection--comma"
                              >
                                User
                              </div>
                              <input
                                aria-readonly="false"
                                autocomplete="on"
                                data-vv-name="typeId"
                                readonly="readonly"
                                type="text"
                              />
                            </div>
                            <div
                              class="v-input__append-inner"
                            >
                              <div
                                class="v-input__icon v-input__icon--append"
                              >
                                <i
                                  aria-hidden="true"
                                  class="v-icon material-icons theme--light"
                                >
                                  arrow_drop_down
                                </i>
                              </div>
                            </div>
                          </div>
                          <div
                            class="v-menu"
                          >
                            <div
                              class="v-menu__content theme--light "
                              style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                            >
                              <div
                                class="v-select-list v-card theme--light"
                              >
                                <div
                                  class="v-list theme--light"
                                  role="list"
                                >
                                  <div
                                    class="primary--text"
                                    role="listitem"
                                  >
                                    <a
                                      class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
                                    >
                                      <div
                                        class="v-list__tile__content"
                                      >
                                        <div
                                          class="v-list__tile__title"
                                        >
                                          User
                                        </div>
                                      </div>
                                    </a>
                                  </div>
                                  <div
                                    role="listitem"
                                  >
                                    <a
                                      class="v-list__tile v-list__tile--link theme--light"
                                    >
                                      <div
                                        class="v-list__tile__content"
                                      >
                                        <div
                                          class="v-list__tile__title"
                                        >
                                          Fleet Member
                                        </div>
                                      </div>
                                    </a>
                                  </div>
                                  <div
                                    role="listitem"
                                  >
                                    <a
                                      class="v-list__tile v-list__tile--link theme--light"
                                    >
                                      <div
                                        class="v-list__tile__content"
                                      >
                                        <div
                                          class="v-list__tile__title"
                                        >
                                          Venue
                                        </div>
                                      </div>
                                    </a>
                                  </div>
                                  <div
                                    role="listitem"
                                  >
                                    <a
                                      class="v-list__tile v-list__tile--link theme--light"
                                    >
                                      <div
                                        class="v-list__tile__content"
                                      >
                                        <div
                                          class="v-list__tile__title"
                                        >
                                          Event
                                        </div>
                                      </div>
                                    </a>
                                  </div>
                                  <div
                                    role="listitem"
                                  >
                                    <a
                                      class="v-list__tile v-list__tile--link theme--light"
                                    >
                                      <div
                                        class="v-list__tile__content"
                                      >
                                        <div
                                          class="v-list__tile__title"
                                        >
                                          Event/Fleet Member
                                        </div>
                                      </div>
                                    </a>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                   
                  <div
                    class="flex md6 sm12 ml-4"
                  >
                    <div
                      background-color="white"
                      class="v-input mt-0 pt-0 v-text-field v-text-field--placeholder v-select v-autocomplete v-input--hide-details theme--light"
                      height="48"
                      type="1"
                    >
                      <div
                        class="v-input__control"
                      >
                        <div
                          class="v-input__slot white"
                          style="height: 48px;"
                        >
                          <div
                            class="v-select__slot"
                          >
                            <input
                              aria-label=""
                              autocomplete="off"
                              placeholder="Search User"
                              role="combobox"
                              type="1"
                            />
                            <div
                              class="v-input__append-inner"
                            >
                              <div
                                class="v-input__icon v-input__icon--"
                              >
                                <i
                                  aria-hidden="true"
                                  class="v-icon v-icon--link material-icons theme--light"
                                />
                              </div>
                            </div>
                            <div
                              class="v-input__append-inner"
                            >
                              <div
                                class="v-input__icon v-input__icon--append"
                              >
                                <i
                                  aria-hidden="true"
                                  class="v-icon material-icons theme--light"
                                >
                                  arrow_drop_down
                                </i>
                              </div>
                            </div>
                          </div>
                          <div
                            class="v-menu"
                          >
                            <div
                              class="v-menu__content theme--light v-autocomplete__content"
                              style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                            >
                              <div
                                class="v-select-list v-card theme--light"
                              >
                                <div
                                  class="v-list theme--light"
                                  role="list"
                                >
                                  <div
                                    role="listitem"
                                  >
                                    <div
                                      class="v-list__tile theme--light"
                                    >
                                      <div
                                        class="v-list__tile__content"
                                      >
                                        <div
                                          class="v-list__tile__title"
                                        >
                                          No data available
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <div
          class="flex text-no-wrap"
        >
          <button
            class="v-btn v-btn--large theme--light"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              
            Clear Filters
          
            </div>
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`FilterSorter Snapshots with props 1`] = `
<div
  autocomplete_url=""
  class="v-card v-sheet theme--light"
  filters="[object Object]"
  style="background-color: rgb(248, 248, 248); border-color: #f8f8f8;"
>
  <form
    class="v-form"
    novalidate="novalidate"
  >
    <div
      class="container filter-sorter-container fluid"
    >
       
      <div
        class="layout filter-sorter-main-layout row wrap"
      >
        <!---->
         
        <div
          class="flex grow"
        >
          <div
            class="v-input v-text-field v-text-field--single-line v-text-field--solo v-text-field--solo-flat v-text-field--enclosed v-text-field--placeholder theme--light"
          >
            <div
              class="v-input__control"
            >
              <div
                class="v-input__slot"
              >
                <div
                  class="v-text-field__slot"
                >
                  <input
                    placeholder="Start typing to Search"
                    type="text"
                  />
                </div>
              </div>
              <div
                class="v-text-field__details"
              >
                <div
                  class="v-messages theme--light"
                >
                  <div
                    class="v-messages__wrapper"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <div
          class="flex shrink"
        >
          <div
            class="v-input filter-sorter-sortable-select v-text-field v-text-field--single-line v-text-field--solo v-text-field--solo-flat v-text-field--enclosed v-select theme--light"
            role="combobox"
          >
            <div
              class="v-input__control"
            >
              <div
                class="v-input__slot"
              >
                <div
                  class="v-select__slot"
                >
                  <label
                    aria-hidden="true"
                    class="v-label theme--light"
                    style="left: 0px; position: absolute;"
                  >
                    Sort by
                  </label>
                  <div
                    class="v-select__selections"
                  >
                    <input
                      aria-label="Sort by"
                      aria-readonly="false"
                      autocomplete="on"
                      data-vv-name="sort"
                      readonly="readonly"
                      type="text"
                    />
                  </div>
                  <div
                    class="v-input__append-inner"
                  >
                    <div
                      class="v-input__icon v-input__icon--append"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        arrow_drop_down
                      </i>
                    </div>
                  </div>
                </div>
                <div
                  class="v-menu"
                >
                  <div
                    class="v-menu__content theme--light "
                    style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                  >
                    <div
                      class="v-select-list v-card theme--light"
                    >
                      <div
                        class="v-list theme--light"
                        role="list"
                      >
                        <div
                          role="listitem"
                        >
                          <div
                            class="v-list__tile theme--light"
                          >
                            <div
                              class="v-list__tile__content"
                            >
                              <div
                                class="v-list__tile__title"
                              >
                                No data available
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="v-text-field__details"
              >
                <div
                  class="v-messages theme--light"
                >
                  <div
                    class="v-messages__wrapper"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <!---->
         
      </div>
       
      <!---->
       
      <div
        class="layout filter-sorter-expanded-layout align-center justify-center row fill-height"
        style="display: none;"
      >
        <div
          class="flex"
        />
         
        <div
          class="flex text-no-wrap"
        >
          <button
            class="v-btn v-btn--large theme--light"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              
            Clear Filters
          
            </div>
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`FilterSorter Snapshots without-expansion 1`] = `
<div
  autocomplete_url=""
  class="v-card v-sheet theme--light"
  filters="[object Object]"
  style="background-color: rgb(248, 248, 248); border-color: #f8f8f8;"
>
  <form
    class="v-form"
    novalidate="novalidate"
  >
    <div
      class="container filter-sorter-container fluid"
    >
       
      <div
        class="layout filter-sorter-main-layout row wrap"
      >
        <!---->
         
        <div
          class="flex grow"
        >
          <div
            class="v-input v-text-field v-text-field--single-line v-text-field--solo v-text-field--solo-flat v-text-field--enclosed v-text-field--placeholder theme--light"
          >
            <div
              class="v-input__control"
            >
              <div
                class="v-input__slot"
              >
                <div
                  class="v-text-field__slot"
                >
                  <input
                    placeholder="Start typing to Search"
                    type="text"
                  />
                </div>
              </div>
              <div
                class="v-text-field__details"
              >
                <div
                  class="v-messages theme--light"
                >
                  <div
                    class="v-messages__wrapper"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <div
          class="flex shrink"
        >
          <div
            class="v-input filter-sorter-sortable-select v-text-field v-text-field--single-line v-text-field--solo v-text-field--solo-flat v-text-field--enclosed v-select theme--light"
            role="combobox"
          >
            <div
              class="v-input__control"
            >
              <div
                class="v-input__slot"
              >
                <div
                  class="v-select__slot"
                >
                  <label
                    aria-hidden="true"
                    class="v-label theme--light"
                    style="left: 0px; position: absolute;"
                  >
                    Sort by
                  </label>
                  <div
                    class="v-select__selections"
                  >
                    <input
                      aria-label="Sort by"
                      aria-readonly="false"
                      autocomplete="on"
                      data-vv-name="sort"
                      readonly="readonly"
                      type="text"
                    />
                  </div>
                  <div
                    class="v-input__append-inner"
                  >
                    <div
                      class="v-input__icon v-input__icon--append"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        arrow_drop_down
                      </i>
                    </div>
                  </div>
                </div>
                <div
                  class="v-menu"
                >
                  <div
                    class="v-menu__content theme--light "
                    style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                  >
                    <div
                      class="v-select-list v-card theme--light"
                    >
                      <div
                        class="v-list theme--light"
                        role="list"
                      >
                        <div
                          role="listitem"
                        >
                          <div
                            class="v-list__tile theme--light"
                          >
                            <div
                              class="v-list__tile__content"
                            >
                              <div
                                class="v-list__tile__title"
                              >
                                No data available
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="v-text-field__details"
              >
                <div
                  class="v-messages theme--light"
                >
                  <div
                    class="v-messages__wrapper"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <!---->
         
      </div>
       
      <!---->
       
      <div
        class="layout filter-sorter-expanded-layout align-center justify-center row fill-height"
        style="display: none;"
      >
        <div
          class="flex"
        />
         
        <div
          class="flex text-no-wrap"
        >
          <button
            class="v-btn v-btn--large theme--light"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              
            Clear Filters
          
            </div>
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;
